--- a/PYTHON/PP-clases.ipynb
+++ b/PYTHON/PP-clases.ipynb
@@ -95,7 +95,7 @@
     "        elif dias_deseados > dias_vacaciones_restantes:\n",
     "            return f'No puedes ir {dias_deseados} dias de vacaciones'\n",
     "        else:\n",
-    "            return f'Tus dias de vacaciones son {dias_vacaciones_restantes}' #@Nos esta retornando mal este return\n",
+    "            return f'Tus dias de vacaciones son {dias_vacaciones_restantes}' \n",
     "\n",
     "     # cambiando_posicion\n",
     "    def cambiando_posicion(self):\n",
@@ -104,7 +104,7 @@
     "            if x == 'Python':\n",
     "                return 'Bien hecho!'\n",
     "            elif x == 'Excel' :\n",
-    "                return 'Te recomiendo que uses Python' #@ mejorar que convierta el strin en lower o upper\n",
+    "                return 'Te recomiendo que uses Python' \n",
     "     \n",
     "    \n"
    ]
