--- a/PYTHON/PP-ficheros.ipynb
+++ b/PYTHON/PP-ficheros.ipynb
@@ -99,6 +99,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -117,118 +126,6 @@
     "#verificamos que estamos en la ruta correcta de nuevo:\n",
     "\n",
     "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] El sistema no puede encontrar el archivo especificado: 'PYTHON'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m os\u001b[39m.\u001b[39;49mchdir(\u001b[39m\"\u001b[39;49m\u001b[39mPYTHON\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] El sistema no puede encontrar el archivo especificado: 'PYTHON'"
-     ]
-    }
-   ],
-   "source": [
-    "os.chdir(\"PYTHON\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\noemi\\\\OneDrive\\\\Escritorio\\\\ADALAB\\\\modulo_1\\\\DA_PromoC_Modulo1_Sprint2_Noemi-Anahi\\\\PYTHON'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 2] El sistema no puede encontrar el archivo especificado: 'datos'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m os\u001b[39m.\u001b[39;49mchdir(\u001b[39m\"\u001b[39;49m\u001b[39mdatos\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] El sistema no puede encontrar el archivo especificado: 'datos'"
-     ]
-    }
-   ],
-   "source": [
-    "os.chdir(\"datos\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\noemi\\\\OneDrive\\\\Escritorio\\\\ADALAB\\\\modulo_1\\\\DA_PromoC_Modulo1_Sprint2_Noemi-Anahi\\\\PYTHON\\\\primera-toma-contacto\\\\datos'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] El sistema no puede encontrar la ruta especificada: '...\\\\primera_toma_contacto'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m os\u001b[39m.\u001b[39;49mchdir(\u001b[39m\"\u001b[39;49m\u001b[39m...\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mprimera_toma_contacto\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] El sistema no puede encontrar la ruta especificada: '...\\\\primera_toma_contacto'"
-     ]
-    }
-   ],
-   "source": [
-    "os.chdir(\"...\\\\primera_toma_contacto\")\n"
    ]
   },
   {
@@ -340,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,20 +254,19 @@
     "#comprobamos si nuestro fichero existe o no y actuamos según el enunciado.\n",
     "    if nombre_fichero in os.listdir():\n",
     "        sobreescribir = input(\"Este archivo ya existe, ¿quieres sobreescribirlo? s/n\")\n",
-    "        for i in sobreescribir:\n",
-    "            if i == \"s\":\n",
-    "                ubi_archivo = ubi_carpeta + \"\\\\\" + nombre_fichero\n",
-    "                print(ubi_archivo)\n",
-    "                with open (nombre_fichero, modo, encoding) as f:\n",
+    "        if sobreescribir == \"s\":\n",
+    "                #ubi_archivo = ubi_carpeta + \"\\\\\" + nombre_fichero\n",
+    "                #print(ubi_archivo)\n",
+    "                with open (nombre_fichero, \"w\") as f:\n",
     "                    f.writelines(contenido)\n",
     "                    f.close()\n",
     "                print(\"El documento se ha sobreescrito con éxito\")\n",
     "\n",
-    "            elif i == \"n\":\n",
+    "        elif sobreescribir == \"n\":\n",
     "                pass\n",
     "\n",
     "    elif nombre_fichero not in os.listdir():\n",
-    "            with open(nombre_fichero, \"x\" , encoding) as f:\n",
+    "            with open(nombre_fichero, \"x\") as f:\n",
     "                f.writelines(contenido)\n",
     "                f.readlines(contenido)\n",
     "                f.close()\n"
@@ -378,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +308,7 @@
     "        Therefore we want you to assist us in moving this money out of Nigeria. We shall definitely compensate you handsomely for the assistance. We can do this by instructing the Security Company here in Nigeria to\n",
     "        move the consignment to their affiliate branch office outside Nigeria through diplomatic means and the consignment will be termed as Precious Stones and Jewelleries\" which you bought during your visit to Nigeria and is being transfered to your country from here for safe keeping. Then we can arrange to meet at the destination country to take the delivery of the consignment. You will thereafter open an account there and lodge the Money there and gradually instruct remittance to your Country. \n",
     "\n",
-    "        This business is 100% risk free for you so please treat this matter with utmost confidentiality .If you indicate your interest to assist us please just e-mail me for more Explanation on how we plan to execute the transaction.\n",
+    "        This business is \"100%\" risk free for you so please treat this matter with utmost confidentiality .If you indicate your interest to assist us please just e-mail me for more Explanation on how we plan to execute the transaction.\n",
     "\n",
     "        Expecting your response urgently.\n",
     "\n",
@@ -474,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -482,36 +378,24 @@
      "output_type": "stream",
      "text": [
       "Nuestro directorio de trabajo es el siguiente c:\\Users\\noemi\\OneDrive\\Escritorio\\ADALAB\\modulo_1\\DA_PromoC_Modulo1_Sprint2_Noemi-Anahi\\PYTHON\\primera-toma-contacto\\datos\n",
-      "c:\\Users\\noemi\\OneDrive\\Escritorio\\ADALAB\\modulo_1\\DA_PromoC_Modulo1_Sprint2_Noemi-Anahi\\PYTHON\\primera-toma-contacto\\datos\\saludo.txt\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [78], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m segunda_funcion(\u001b[39m\"\u001b[39;49m\u001b[39msaludo.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mutf8\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mcarta\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn [75], line 18\u001b[0m, in \u001b[0;36msegunda_funcion\u001b[1;34m(nombre_fichero, modo, encoding, contenido)\u001b[0m\n\u001b[0;32m     16\u001b[0m ubi_archivo \u001b[39m=\u001b[39m ubi_carpeta \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m nombre_fichero\n\u001b[0;32m     17\u001b[0m \u001b[39mprint\u001b[39m(ubi_archivo)\n\u001b[1;32m---> 18\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m (nombre_fichero, modo, encoding) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m     19\u001b[0m     f\u001b[39m.\u001b[39mwritelines(contenido)\n\u001b[0;32m     20\u001b[0m     f\u001b[39m.\u001b[39mclose()\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object cannot be interpreted as an integer"
+      "El documento se ha sobreescrito con éxito\n"
      ]
     }
    ],
    "source": [
-    "segunda_funcion(\"saludo.txt\", \"x\", \"utf8\", \"carta\")"
+    "segunda_funcion(\"saludo.txt\", \"x\", \"utf8\", carta)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ARCHIVOS XML"
+    "### ARCHIVO XML"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -563,8 +447,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [104], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m archivo_xml(\u001b[39m\"\u001b[39;49m\u001b[39mpeliculasxml.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn [103], line 7\u001b[0m, in \u001b[0;36marchivo_xml\u001b[1;34m(nombre_archivoxml)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mxml\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39metree\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mElementTree\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mET\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39m# abrimos el fichero y le decimos que printee la raiz y los atributos\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m tree \u001b[39m=\u001b[39m ET\u001b[39m.\u001b[39;49mparse(nombre_archivoxml)\n\u001b[0;32m      8\u001b[0m root \u001b[39m=\u001b[39m tree\u001b[39m.\u001b[39mgetroot()\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLa raíz de nuestro archivo es \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mroot\u001b[39m.\u001b[39mtag\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn [128], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m archivo_xml(\u001b[39m\"\u001b[39;49m\u001b[39mpeliculasxml.txt\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn [127], line 7\u001b[0m, in \u001b[0;36marchivo_xml\u001b[1;34m(nombre_archivoxml)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mxml\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39metree\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mElementTree\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mET\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39m# abrimos el fichero y le decimos que printee la raiz y los atributos\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m tree \u001b[39m=\u001b[39m ET\u001b[39m.\u001b[39;49mparse(nombre_archivoxml)\n\u001b[0;32m      8\u001b[0m root \u001b[39m=\u001b[39m tree\u001b[39m.\u001b[39mgetroot()\n\u001b[0;32m      9\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLa raíz de nuestro archivo es \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mroot\u001b[39m.\u001b[39mtag\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m)\n",
       "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.2288.0_x64__qbz5n2kfra8p0\\lib\\xml\\etree\\ElementTree.py:1222\u001b[0m, in \u001b[0;36mparse\u001b[1;34m(source, parser)\u001b[0m\n\u001b[0;32m   1213\u001b[0m \u001b[39m\"\"\"Parse XML document into element tree.\u001b[39;00m\n\u001b[0;32m   1214\u001b[0m \n\u001b[0;32m   1215\u001b[0m \u001b[39m*source* is a filename or file object containing XML data,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1219\u001b[0m \n\u001b[0;32m   1220\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   1221\u001b[0m tree \u001b[39m=\u001b[39m ElementTree()\n\u001b[1;32m-> 1222\u001b[0m tree\u001b[39m.\u001b[39;49mparse(source, parser)\n\u001b[0;32m   1223\u001b[0m \u001b[39mreturn\u001b[39;00m tree\n",
       "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_3.10.2288.0_x64__qbz5n2kfra8p0\\lib\\xml\\etree\\ElementTree.py:569\u001b[0m, in \u001b[0;36mElementTree.parse\u001b[1;34m(self, source, parser)\u001b[0m\n\u001b[0;32m    567\u001b[0m close_source \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m    568\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(source, \u001b[39m\"\u001b[39m\u001b[39mread\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 569\u001b[0m     source \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(source, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    570\u001b[0m     close_source \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    571\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
       "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'peliculasxml.txt'"
