--- a/PYTHON/PP-python-sql2.ipynb
+++ b/PYTHON/PP-python-sql2.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "mycursor = cnx.cursor()\n",
     "try:\n",
-    "    mycursor.execute(\"CREATE DATABASE mi_primerita_BBDD_Python\")\n",
+    "    mycursor.execute(\"CREATE DATABASE IF NOT EXISTS mi_primerita_BBDD_Python\")\n",
     "    print(mycursor)\n",
     "except mysql.connector.Error as err:\n",
     "    print(err)\n",
@@ -105,20 +105,20 @@
     "\n",
     "contraseña = \"AlumnaAdalab\"\n",
     "\n",
-    "query_zapatillas = \"\"\"CREATE TABLE Zapatillas (\n",
+    "query_zapatillas = \"\"\"CREATE TABLE IF NOT EXISTS Zapatillas (\n",
     "                        idZapatillas INT NOT NULL AUTO_INCREMENT, modelo VARCHAR(45) NOT NULL, color VARCHAR(45) NOT NULL, talla INT NOT NULL, \n",
     "                        PRIMARY KEY(idZapatillas));\"\"\"\n",
     "    \n",
-    "query_clientes = \"\"\"CREATE TABLE Clientes (\n",
+    "query_clientes = \"\"\"CREATE TABLE IF NOT EXISTS Clientes (\n",
     "                        idClientes INT AUTO_INCREMENT NOT NULL, nombre VARCHAR(45) NOT NULL, numero_telefono INT(9) NOT NULL, \n",
     "                        email VARCHAR(45) NOT NULL, direccion VARCHAR(45) NOT NULL, provincia VARCHAR(45) NOT NULL, \n",
     "                        pais VARCHAR(45) NOT NULL, codigo_postal INT(9) NOT NULL, PRIMARY KEY (idClientes));\"\"\"\n",
     "    \n",
-    "query_empleados = \"\"\"CREATE TABLE Empleados (\n",
+    "query_empleados = \"\"\"CREATE TABLE IF NOT EXISTS Empleados (\n",
     "                        idEmpleado INT AUTO_INCREMENT NOT NULL, nombre VARCHAR(45) NOT NULL, tienda VARCHAR(45) NOT NULL,\n",
     "                        salario FLOAT NULL, fecha_incorporacion DATE NOT NULL, PRIMARY KEY (idEmpleado));\"\"\"\n",
     "    \n",
-    "query_facturas = \"\"\" CREATE TABLE Facturas (\n",
+    "query_facturas = \"\"\" CREATE TABLE IF NOT EXISTS Facturas (\n",
     "                        idFactura INT NOT NULL AUTO_INCREMENT, idEmpleado INT NOT NULL, idClientes INT NOT NULL, idZapatillas INT NOT NULL,\n",
     "                        fecha DATE NOT NULL, total FLOAT NOT NULL, \n",
     "                        PRIMARY KEY (idFactura), \n",
