--- a/PYTHON/PP-python_sql1.ipynb
+++ b/PYTHON/PP-python_sql1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,91 @@
       "('def', 'northwind', 'categories', 'category_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', 'auto_increment', 'select,insert,update,references', '', '', None)\n",
       "('def', 'northwind', 'categories', 'category_name', 2, None, 'NO', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
       "('def', 'northwind', 'categories', 'description', 3, None, 'YES', 'longtext', 4294967295, 4294967295, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'longtext', '', '', 'select,insert,update,references', '', '', None)\n",
-      "('def', 'northwind', 'categories', 'picture', 4, None, 'YES', 'longblob', 4294967295, 4294967295, None, None, None, None, None, 'longblob', '', '', 'select,insert,update,references', '', '', None)\n"
+      "('def', 'northwind', 'categories', 'picture', 4, None, 'YES', 'longblob', 4294967295, 4294967295, None, None, None, None, None, 'longblob', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customer_customer_demo', 'customer_id', 1, None, 'NO', 'char', 5, 15, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(5)', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customer_customer_demo', 'customertype_id', 2, None, 'NO', 'char', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(10)', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customer_demographics', 'customer_type_id', 1, None, 'NO', 'char', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(10)', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customer_demographics', 'customer_desc', 2, None, 'YES', 'longtext', 4294967295, 4294967295, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'longtext', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'customer_id', 1, None, 'NO', 'char', 5, 15, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(5)', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'company_name', 2, None, 'NO', 'varchar', 40, 120, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(40)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'contact_name', 3, None, 'YES', 'varchar', 30, 90, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(30)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'contact_title', 4, None, 'YES', 'varchar', 30, 90, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(30)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'address', 5, None, 'YES', 'varchar', 60, 180, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(60)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'city', 6, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'region', 7, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'postal_code', 8, None, 'YES', 'varchar', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(10)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'country', 9, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'phone', 10, None, 'YES', 'varchar', 24, 72, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(24)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'customers', 'fax', 11, None, 'YES', 'varchar', 24, 72, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(24)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employee_territories', 'employee_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employee_territories', 'territory_id', 2, None, 'NO', 'varchar', 20, 60, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(20)', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'employee_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', 'auto_increment', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'last_name', 2, None, 'NO', 'varchar', 20, 60, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(20)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'first_name', 3, None, 'NO', 'varchar', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(10)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'title', 4, None, 'YES', 'varchar', 30, 90, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(30)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'title_of_courtesy', 5, None, 'YES', 'varchar', 25, 75, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(25)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'birth_date', 6, None, 'YES', 'datetime', None, None, None, None, 0, None, None, 'datetime', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'hire_date', 7, None, 'YES', 'datetime', None, None, None, None, 0, None, None, 'datetime', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'address', 8, None, 'YES', 'varchar', 60, 180, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(60)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'city', 9, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'region', 10, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'postal_code', 11, None, 'YES', 'varchar', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(10)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'country', 12, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'home_phone', 13, None, 'YES', 'varchar', 24, 72, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(24)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'extension', 14, None, 'YES', 'varchar', 4, 12, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(4)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'photo', 15, None, 'YES', 'longblob', 4294967295, 4294967295, None, None, None, None, None, 'longblob', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'notes', 16, None, 'YES', 'longtext', 4294967295, 4294967295, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'longtext', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'reports_to', 17, None, 'YES', 'int', None, None, 10, 0, None, None, None, 'int', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'employees', 'photo_path', 18, None, 'YES', 'varchar', 255, 765, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(255)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'order_details', 'order_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'order_details', 'product_id', 2, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'order_details', 'unit_price', 3, '0', 'NO', 'double', None, None, 22, None, None, None, None, 'double', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'order_details', 'quantity', 4, '0', 'NO', 'smallint', None, None, 5, 0, None, None, None, 'smallint', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'order_details', 'discount', 5, '0', 'NO', 'double', None, None, 22, None, None, None, None, 'double', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'order_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', 'auto_increment', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'customer_id', 2, None, 'YES', 'char', 5, 15, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(5)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'employee_id', 3, None, 'YES', 'int', None, None, 10, 0, None, None, None, 'int', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'order_date', 4, None, 'YES', 'datetime', None, None, None, None, 0, None, None, 'datetime', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'required_date', 5, None, 'YES', 'datetime', None, None, None, None, 0, None, None, 'datetime', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'shipped_date', 6, None, 'YES', 'datetime', None, None, None, None, 0, None, None, 'datetime', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_via', 7, None, 'YES', 'int', None, None, 10, 0, None, None, None, 'int', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'freight', 8, '0', 'YES', 'double', None, None, 22, None, None, None, None, 'double', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_name', 9, None, 'YES', 'varchar', 40, 120, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(40)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_address', 10, None, 'YES', 'varchar', 60, 180, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(60)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_city', 11, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_region', 12, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_postal_code', 13, None, 'YES', 'varchar', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(10)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'orders', 'ship_country', 14, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'product_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', 'auto_increment', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'product_name', 2, None, 'NO', 'varchar', 40, 120, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(40)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'supplier_id', 3, None, 'YES', 'int', None, None, 10, 0, None, None, None, 'int', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'category_id', 4, None, 'YES', 'int', None, None, 10, 0, None, None, None, 'int', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'quantity_per_unit', 5, None, 'YES', 'varchar', 20, 60, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(20)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'unit_price', 6, '0', 'YES', 'double', None, None, 22, None, None, None, None, 'double', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'units_in_stock', 7, '0', 'YES', 'smallint', None, None, 5, 0, None, None, None, 'smallint', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'units_on_order', 8, '0', 'YES', 'smallint', None, None, 5, 0, None, None, None, 'smallint', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'reorder_level', 9, '0', 'YES', 'smallint', None, None, 5, 0, None, None, None, 'smallint', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'products', 'discontinued', 10, '0', 'NO', 'tinyint', None, None, 3, 0, None, None, None, 'tinyint(1)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'region', 'region_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'region', 'region_description', 2, None, 'NO', 'char', 50, 150, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(50)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'shippers', 'shipper_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', 'auto_increment', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'shippers', 'company_name', 2, None, 'NO', 'varchar', 40, 120, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(40)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'shippers', 'phone', 3, None, 'YES', 'varchar', 24, 72, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(24)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'supplier_id', 1, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'PRI', 'auto_increment', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'company_name', 2, None, 'NO', 'varchar', 40, 120, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(40)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'contact_name', 3, None, 'YES', 'varchar', 30, 90, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(30)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'contact_title', 4, None, 'YES', 'varchar', 30, 90, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(30)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'adress', 5, None, 'YES', 'varchar', 60, 180, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(60)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'city', 6, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'region', 7, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'postal_code', 8, None, 'YES', 'varchar', 10, 30, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(10)', 'MUL', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'country', 9, None, 'YES', 'varchar', 15, 45, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(15)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'phone', 10, None, 'YES', 'varchar', 24, 72, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(24)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'fax', 11, None, 'YES', 'varchar', 24, 72, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(24)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'suppliers', 'home_page', 12, None, 'YES', 'longtext', 4294967295, 4294967295, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'longtext', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'territories', 'territory_id', 1, None, 'NO', 'varchar', 20, 60, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'varchar(20)', 'PRI', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'territories', 'territory_description', 2, None, 'NO', 'char', 50, 150, None, None, None, 'utf8mb3', 'utf8mb3_general_ci', 'char(50)', '', '', 'select,insert,update,references', '', '', None)\n",
+      "('def', 'northwind', 'territories', 'region_id', 3, None, 'NO', 'int', None, None, 10, 0, None, None, None, 'int', 'MUL', '', 'select,insert,update,references', '', '', None)\n"
      ]
     }
    ],
@@ -157,7 +241,7 @@
     "\n",
     "\n",
     "mycursor = mydb.cursor()\n",
-    "mycursor.execute(\"SELECT * FROM COLUMNS WHERE TABLE_NAME = 'categories'\")\n",
+    "mycursor.execute (\"\"\"SELECT * FROM COLUMNS WHERE TABLE_SCHEMA = \"northwind\" \"\"\")\n",
     "\n",
     "\n",
     "for column in mycursor:\n",
